==================
   Not Released
==================

   ELSI:
   * Adopted literature definition of the electronic entropy.

   New Solvers:
   * Added support for the density matrix purification methods implemented
     in the NTPoly library.  Implementation of the same methods with dense
     linear algebra has been removed.

   ELPA:
   * For externally linked ELPA, added options to perform single precision
     calculations and to automatically tune the internal runtime parameters
     of the solver.
   * Interface for externally linked ELPA compatible with ELPA 2018.05.

   NTPoly:
   * Added canonical purificaiton, trace correcting purification, 4th order
     trace resetting purification, and generalized hole-particle canonical
     purification methods.

   PEXSI:
   * Updated redistributed PEXSI source code to version 1.0.2, which
     returns the complex-valued density matrix and energy density matrix
     instead of their transpose.

   SLEPc-SIPs:
   * Updated interface to support PETSc 3.9.3 and SLEPc 3.9.2.

============================
   ELSI May 2018 (v2.0.2)
============================

   PEXSI:
   * Updated redistributed PEXSI source code to version 1.0.1, which fixes
     the complex-valued Fermi operator expansion routine.
   * Downgraded redistributed (PT-)SCOTCH source code to version 6.0.0, as
     the 6.0.5a version seems to be incompatible with PEXSI.

============================
   ELSI May 2018 (v2.0.1)
============================

   ELSI:
   * Switched to the semantic versioning scheme (http://semver.org).
   * Fixed building ELSI as a shared library with tests enabled.
   * Improved stability when calling PBLAS routines pdtran and pztranc.

   Known Issue:
   * Depending on the choice of k-points, the complex PEXSI solver may fail
     at the inertia counting stage.

============================
   ELSI May 2018 (v2.0.0)
============================

   ELSI:
   * CMake build system has replaced the Makefile-based system.