@@ -267,7 +267,7 @@ ELSI is a National Science Foundation Software Infrastructure for Sustained Inno
 \chapter{Installation of ELSI}
 \section{Overview}
 \label{sec:install}
-The ELSI package contains the ELSI Interface software as well as redistributed source code for the solver libraries ELPA (version 2016.11.001), libOMM, NTPoly, and PEXSI (version 1.0.2).  We highly encourage all users to request access to our \href{http://git.elsi-interchange.org/elsi-devel}{GitLab server}GitLab server, where we regularly update ELSI between releases while preserving stability.\\
+The ELSI package contains the ELSI Interface software as well as redistributed source code for the solver libraries ELPA (version 2016.11.001), libOMM, NTPoly (version 1.3), and PEXSI (version 1.0.3).  We highly encourage all users to request access to our \href{http://git.elsi-interchange.org/elsi-devel}{GitLab server}GitLab server, where we regularly update ELSI between releases while preserving stability.\\
 
 Starting from the May 2018 (version 2.0.0) release, the installation of ELSI makes use of the \href{http://cmake.org}{CMake} software.\\
 
@@ -1421,6 +1421,8 @@ In all the subroutines listed below, the first argument (input and output) is an
 
 \begin{labeling}{\hspace{6cm}}
 \item [\hspace{0.3cm} \textcolor{blue}{elsi\_get\_initialized}(handle, handle\_init)]
+\item [\hspace{0.3cm} \textcolor{blue}{elsi\_get\_version}(handle, version)]
+\item [\hspace{0.3cm} \textcolor{blue}{elsi\_get\_datestamp}(handle, date\_stamp)]
 \item [\hspace{0.3cm} \textcolor{blue}{elsi\_get\_n\_sing}(handle, n\_sing)]
 \item [\hspace{0.3cm} \textcolor{blue}{elsi\_get\_mu}(handle, mu)]
 \item [\hspace{0.3cm} \textcolor{blue}{elsi\_get\_entropy}(handle, ts)]
@@ -1435,6 +1437,10 @@ In all the subroutines listed below, the first argument (input and output) is an
 \multicolumn{1}{|c|}{\textbf{Argument}} & \multicolumn{1}{c|}{\textbf{Data Type}} & \multicolumn{1}{c|}{\textbf{Explanation}}\\
 \hline
 \textcolor{blue}{handle\_init}         & integer                      & 0 if the ELSI handle has not been initialized; 1 if initialized.\\
+\hline
+\textcolor{blue}{version}              & string, length is 8          & Version number of ELSI.\\
+\hline
+\textcolor{blue}{date\_stamp}          & string, length is 8          & Date stamp of ELSI.\\
 \hline
 \textcolor{blue}{n\_sing}              & integer                      & Number of eigenvalues of the overlap matrix that are smaller than the singularity tolerance.  See \ref{subsec:setter_elsi}.\\
 \hline
@@ -2165,6 +2171,6 @@ THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS" AND 
 \bigskip
 \noindent\rule{18cm}{0.4pt}
 
-The source code of ELPA 2016.11.001 (LGPL3), libOMM (BSD2), NTPoly (MIT), PEXSI 1.0.2 (BSD3), PT-SCOTCH 6.0.0 (CeCILL-C), and SuperLU\_DIST 5.3.0 (BSD3) are redistributed through this version of ELSI.  Individual license of each library can be found in the corresponding subfolder.\\
+The source code of ELPA 2016.11.001 (LGPL3), libOMM (BSD2), NTPoly 1.3 (MIT), PEXSI 1.0.3 (BSD3), PT-SCOTCH 6.0.0 (CeCILL-C), and SuperLU\_DIST 5.3.0 (BSD3) are redistributed through this version of ELSI.  Individual license of each library can be found in the corresponding subfolder.\\
 
 \end{document}
