@@ -13,19 +13,20 @@
 use strict;
 
 # Obtain version stamp from input arg:
-my $DATE_STAMP = $ARGV[0];
+my $VERSION = $ARGV[0];
+my $DATESTAMP = $ARGV[1];
 
 # Obtain local time and date from PERL function, and fix up to get proper format
-my ($sec,$min,$hour,$mday,$mon,$year,$wday,$yday,$isdst) = localtime(time);
+my ($sec, $min, $hour, $mday, $mon, $year, $wday, $yday, $isdst) = localtime(time);
 $year = $year + 1900;
-$mon  = $mon + 1;
+$mon = $mon + 1;
 my $date = sprintf("%4d-%02d-%02d", $year, $mon, $mday);
 my $time = sprintf("%02d:%02d:%02d", $hour, $min, $sec);
 
 # Now do the same thing, but in UTC and generate a RFC3339-formatted timestamp
-my ($sec,$min,$hour,$mday,$mon,$year,$wday,$yday,$isdst) = gmtime(time);
+my ($sec, $min, $hour, $mday, $mon, $year, $wday, $yday, $isdst) = gmtime(time);
 $year = $year + 1900;
-$mon  = $mon + 1;
+$mon = $mon + 1;
 my $datetime = sprintf("%4d-%02d-%02dT%02d:%02d:%02dZ", $year, $mon, $mday, $hour, $min, $sec);
 
 # Hostname
@@ -84,46 +85,42 @@ if ($isgitrepos) {
     $gitmsg = "UNKNOWN";
 }
 
-if ($DATE_STAMP eq "--only-gitstr") {
-    print "$gitstr\n";
-} else {
-    print "! Copyright (c) 2015-2018, the ELSI team.\n";
-    print "! All rights reserved.\n";
-    print "!\n";
-    print "! This file is part of ELSI and is distributed under the BSD 3-clause license,\n";
-    print "! which may be found in the LICENSE file in the ELSI root directory.\n";
-    print "!\n";
-    print "!>\n";
-    print "!! This subroutine returns details about ELSI's compilation, generated by the\n";
-    print "!! script elsi_version_writer.pl as part of the ELSI make process.\n";
-    print "!!\n";
-    print "subroutine elsi_version_info(s1,s2,s3,l1,s4,s5,s6)\n";
-    print "\n";
-    print "  implicit none\n";
-    print "\n";
-    print "  character(len=10), intent(out) :: s1\n";
-    print "  character(len=40), intent(out) :: s2\n";
-    print "  character(len=8),  intent(out) :: s3\n";
-    print "  logical,           intent(out) :: l1\n";
-    print "  character(len=40), intent(out) :: s4\n";
-    print "  character(len=40), intent(out) :: s5\n";
-    print "  character(len=20), intent(out) :: s6\n";
-    print "\n";
-    print "  character(len=10), parameter :: DATE_STAMP        = \"$DATE_STAMP\"\n";
-    print "  character(len=40), parameter :: COMMIT            = \"$gitcommit\"\n";
-    print "  character(len=8),  parameter :: COMMIT_ABBREV     = \"$gitcommitabbrev\"\n";
-    print "  logical,           parameter :: COMMIT_MODIFIED   = $modlog\n";
-    print "  character(len=40), parameter :: COMMIT_MSG_ABBREV = \"$gitmsg\"\n";
-    print "  character(len=40), parameter :: HOSTNAME          = \"$host\"\n";
-    print "  character(len=20), parameter :: DATETIME          = \"$datetime\"\n";
-    print "\n";
-    print "  s1 = DATE_STAMP\n";
-    print "  s2 = COMMIT\n";
-    print "  s3 = COMMIT_ABBREV\n";
-    print "  l1 = COMMIT_MODIFIED\n";
-    print "  s4 = COMMIT_MSG_ABBREV\n";
-    print "  s5 = HOSTNAME\n";
-    print "  s6 = DATETIME\n";
-    print "\n";
-    print "end subroutine\n";
-}
+print "! Copyright (c) 2015-2018, the ELSI team.\n";
+print "! All rights reserved.\n";
+print "!\n";
+print "! This file is part of ELSI and is distributed under the BSD 3-clause license,\n";
+print "! which may be found in the LICENSE file in the ELSI root directory.\n";
+print "!\n";
+print "!>\n";
+print "!! This subroutine returns details about ELSI's compilation, generated by the\n";
+print "!! script elsi_version_writer.pl as part of the ELSI make process.\n";
+print "!!\n";
+print "subroutine elsi_version_info(s1,s2,s3,l1,s4,s5,s6)\n";
+print "\n";
+print "  implicit none\n";
+print "\n";
+print "  character(len=8),  intent(out) :: s1\n";
+print "  character(len=8),  intent(out) :: s2\n";
+print "  character(len=8),  intent(out) :: s3\n";
+print "  logical,           intent(out) :: l1\n";
+print "  character(len=40), intent(out) :: s4\n";
+print "  character(len=40), intent(out) :: s5\n";
+print "  character(len=20), intent(out) :: s6\n";
+print "\n";
+print "  character(len=8),  parameter :: VERSION   = \"$VERSION\"\n";
+print "  character(len=8),  parameter :: DATESTAMP = \"$DATESTAMP\"\n";
+print "  character(len=8),  parameter :: COMMIT    = \"$gitcommitabbrev\"\n";
+print "  logical,           parameter :: MODIFIED  = $modlog\n";
+print "  character(len=40), parameter :: MESSAGE   = \"$gitmsg\"\n";
+print "  character(len=40), parameter :: HOSTNAME  = \"$host\"\n";
+print "  character(len=20), parameter :: DATETIME  = \"$datetime\"\n";
+print "\n";
+print "  s1 = VERSION\n";
+print "  s2 = DATESTAMP\n";
+print "  s3 = COMMIT\n";
+print "  l1 = MODIFIED\n";
+print "  s4 = MESSAGE\n";
+print "  s5 = HOSTNAME\n";
+print "  s6 = DATETIME\n";
+print "\n";
+print "end subroutine\n";
